Fixed registration Issue
