# swagger.json
@@ -7,7 +7,7 @@
   },
   "servers": [
     {
-      "url": "http://localhost:10000/api/v1",
+      "url": "https://homeaiservice.onrender.com/api/v1",
       "description": "Development server (HTTP) for v1"
     }
   ],
@@ -57,7 +57,7 @@
             "type": "number"
           },
           "prices": {
-            "$ref": "#/definitions/Price"
+            "$ref": "#/definitions/default_1"
           },
           "property_id": {
             "type": "string"
@@ -130,7 +130,7 @@
             "type": "number"
           },
           "prices": {
-            "$ref": "#/definitions/Price"
+            "$ref": "#/definitions/default_1"
           },
           "property_id": {
             "type": "string"
@@ -188,9 +188,6 @@
       },
       "IUser": {
         "properties": {
-          "_id": {
-            "type": "string"
-          },
           "company": {
             "type": "string"
           },
@@ -208,7 +205,7 @@
           },
           "listings": {
             "items": {
-              "$ref": "#/definitions/IProperty"
+              "$ref": "#/definitions/default"
             },
             "type": "array"
           },
@@ -225,6 +222,44 @@
             "type": "string"
           },
           "userName": {
+            "type": "string"
+          }
+        },
+        "type": "object"
+      },
+      "ListingBase": {
+        "properties": {
+          "address": {
+            "type": "string"
+          },
+          "bathrooms": {
+            "type": "number"
+          },
+          "bedrooms": {
+            "type": "number"
+          },
+          "building_size": {
+            "type": "number"
+          },
+          "city": {
+            "type": "string"
+          },
+          "prices": {
+            "$ref": "#/definitions/default_1"
+          },
+          "property_id": {
+            "type": "string"
+          },
+          "property_type": {
+            "type": "string"
+          },
+          "state": {
+            "type": "string"
+          },
+          "url": {
+            "type": "string"
+          },
+          "zip_code": {
             "type": "string"
           }
         },
@@ -289,7 +324,48 @@
             "type": "number"
           },
           "prices": {
-            "$ref": "#/definitions/Price"
+            "$ref": "#/definitions/default_1"
+          },
+          "property_id": {
+            "type": "string"
+          },
+          "property_type": {
+            "type": "string"
+          },
+          "state": {
+            "type": "string"
+          },
+          "url": {
+            "type": "string"
+          },
+          "zip_code": {
+            "type": "string"
+          }
+        },
+        "type": "object"
+      },
+      "ListingOverview": {
+        "properties": {
+          "address": {
+            "type": "string"
+          },
+          "bathrooms": {
+            "type": "number"
+          },
+          "bedrooms": {
+            "type": "number"
+          },
+          "building_size": {
+            "type": "number"
+          },
+          "city": {
+            "type": "string"
+          },
+          "image": {
+            "type": "string"
+          },
+          "prices": {
+            "$ref": "#/definitions/default_1"
           },
           "property_id": {
             "type": "string"
@@ -316,20 +392,6 @@
           },
           "username": {
             "type": "string"
-          }
-        },
-        "type": "object"
-      },
-      "Price": {
-        "properties": {
-          "CAD": {
-            "type": "number"
-          },
-          "EUR": {
-            "type": "number"
-          },
-          "USD": {
-            "type": "number"
           }
         },
         "type": "object"
@@ -384,6 +446,70 @@
         "type": "string"
       },
       "T": {
+        "type": "object"
+      },
+      "default": {
+        "properties": {
+          "address": {
+            "type": "string"
+          },
+          "bathrooms": {
+            "type": "number"
+          },
+          "bedrooms": {
+            "type": "number"
+          },
+          "building_size": {
+            "type": "number"
+          },
+          "city": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string"
+          },
+          "images": {
+            "items": {
+              "type": "string"
+            },
+            "type": "array"
+          },
+          "land_size": {
+            "type": "number"
+          },
+          "prices": {
+            "$ref": "#/definitions/default_1"
+          },
+          "property_id": {
+            "type": "string"
+          },
+          "property_type": {
+            "type": "string"
+          },
+          "state": {
+            "type": "string"
+          },
+          "url": {
+            "type": "string"
+          },
+          "zip_code": {
+            "type": "string"
+          }
+        },
+        "type": "object"
+      },
+      "default_1": {
+        "properties": {
+          "CAD": {
+            "type": "number"
+          },
+          "EUR": {
+            "type": "number"
+          },
+          "USD": {
+            "type": "number"
+          }
+        },
         "type": "object"
       }
     },
@@ -797,7 +923,7 @@
                     "data": {
                       "type": "array",
                       "items": {
-                        "$ref": "#/components/schemas/ListingDetailed"
+                        "$ref": "#/components/schemas/IProperty"
                       }
                     }
                   }
